--- a/dataset/all.ipynb
+++ b/dataset/all.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,11 @@
     "for each in app_info.values:\n",
     "    app = each[0]\n",
     "    cat = each[1:]\n",
-    "    app_info_dict[app] = cat\n",
+    "    if app in app_info.keys():\n",
+    "        app_info_dict[app] += cat\n",
+    "    else:\n",
+    "        app_info_dict[app] = cat\n",
+    "        \n",
     "    \n",
     "def f(x):\n",
     "    x = x.split('#')\n",
@@ -745,7 +749,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uId</th>\n",
+       "      <th>appId</th>\n",
+       "      <th>app_total_categery</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000008</td>\n",
+       "      <td>a00105157#a00109386#a00134746#a0013952#a001451...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 0, 0, 0, 0, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000010</td>\n",
+       "      <td>a00102782#a00107077#a00109386#a00134746#a00136...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 0, 6, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000011</td>\n",
+       "      <td>a00158535#a00163116#a00170432#a00187480#a00224...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000013</td>\n",
+       "      <td>a00109386#a0011601#a0012768#a00136287#a0014516...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 0, 4, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000014</td>\n",
+       "      <td>a00109386#a0011894#a0013059#a00134840#a0013578...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       uId                                              appId  \\\n",
+       "0  1000008  a00105157#a00109386#a00134746#a0013952#a001451...   \n",
+       "1  1000010  a00102782#a00107077#a00109386#a00134746#a00136...   \n",
+       "2  1000011  a00158535#a00163116#a00170432#a00187480#a00224...   \n",
+       "3  1000013  a00109386#a0011601#a0012768#a00136287#a0014516...   \n",
+       "4  1000014  a00109386#a0011894#a0013059#a00134840#a0013578...   \n",
+       "\n",
+       "                                  app_total_categery  \n",
+       "0  [0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 0, 0, 0, 0, 1, ...  \n",
+       "1  [0, 0, 0, 0, 0, 0, 0, 1, 0, 6, 0, 0, 0, 0, 0, ...  \n",
+       "2  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, ...  \n",
+       "3  [0, 0, 0, 0, 0, 0, 0, 1, 0, 4, 0, 0, 0, 0, 0, ...  \n",
+       "4  [0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, ...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_app_actived.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +852,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = user_app_actived[['uId','app_average_categery']].values\n",
+    "temp1 = []\n",
+    "for i in  range(len(temp)):\n",
+    "    temp1.append(np.insert(temp[i][1],0,temp[i][0]))\n",
+    "temp1 = np.array(temp1)\n",
+    "temp1 = pd.DataFrame(temp1)\n",
+    "temp1.columns = ['uId'] + ['categery_'+str(i) for i in range(40)]\n",
+    "temp1['uId'] = temp1['uId'].astype('int64')\n",
+    "temp1[['categery_'+str(i) for i in range(40)]] = temp1[['categery_'+str(i) for i in range(40)]].astype('float64')\n",
+    " \n",
+    "user_app_actived = pd.merge(user_app_actived,temp1, on=['uId'], how='inner')\n",
+    "del user_app_actived['app_total_categery']\n",
+    "del user_app_actived['app_average_categery']\n",
+    "del user_app_actived['appId']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(user_app_actived.info(memory_usage='deep'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +892,7 @@
        "2010000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,20 +903,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "join_data = pd.merge(age_train,user_behavior_info, on=['uId'], how='inner')\n",
     "join_data = pd.merge(join_data,user_basic_info,on=['uId'],how='inner')\n",
-    "join_data = pd.merge(join_data,user_app_actived,on=['uId'],how='inner')\n",
-    "del join_data['appId']\n",
-    "del join_data['app_total_categery']"
+    "join_data = pd.merge(join_data,user_app_actived,on=['uId'],how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -799,9 +923,9 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 1370640 entries, 0 to 1370639\n",
-      "Columns: 633 entries, uId to app_average_categery\n",
-      "dtypes: float64(14), int64(4), object(2), uint8(613)\n",
-      "memory usage: 2.1 GB\n",
+      "Columns: 318 entries, uId to categery_39\n",
+      "dtypes: float64(54), int64(4), uint8(260)\n",
+      "memory usage: 956.8 MB\n",
       "None\n",
       "0.681910447761194\n"
      ]
@@ -838,16 +962,16 @@
        "      <th>FFuncTimes</th>\n",
        "      <th>FFuncSum</th>\n",
        "      <th>...</th>\n",
-       "      <th>ct_4g</th>\n",
-       "      <th>ct_4g#wifi</th>\n",
-       "      <th>ct_wifi</th>\n",
-       "      <th>carrier_China_Mobile</th>\n",
-       "      <th>carrier_China_Telecom</th>\n",
-       "      <th>carrier_China_Unicom</th>\n",
-       "      <th>carrier_othercp</th>\n",
-       "      <th>app_total_categery</th>\n",
-       "      <th>app_numbers</th>\n",
-       "      <th>app_average_categery</th>\n",
+       "      <th>categery_30</th>\n",
+       "      <th>categery_31</th>\n",
+       "      <th>categery_32</th>\n",
+       "      <th>categery_33</th>\n",
+       "      <th>categery_34</th>\n",
+       "      <th>categery_35</th>\n",
+       "      <th>categery_36</th>\n",
+       "      <th>categery_37</th>\n",
+       "      <th>categery_38</th>\n",
+       "      <th>categery_39</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -864,16 +988,16 @@
        "      <td>-0.167348</td>\n",
        "      <td>-0.096929</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>21</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.05, 0.0,...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.050000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -888,16 +1012,16 @@
        "      <td>-0.167348</td>\n",
        "      <td>0.111647</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>19</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.111111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -912,16 +1036,16 @@
        "      <td>-0.167348</td>\n",
        "      <td>-0.134224</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.076923</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -936,16 +1060,16 @@
        "      <td>-0.167348</td>\n",
        "      <td>-0.134224</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>54</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.01923076...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.038462</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.057692</td>\n",
+       "      <td>0.038462</td>\n",
+       "      <td>0.192308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -960,20 +1084,20 @@
        "      <td>-0.167348</td>\n",
        "      <td>-0.129280</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 3, 0, 0, 2, ...</td>\n",
-       "      <td>65</td>\n",
-       "      <td>[0.015625, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.046875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.078125</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 633 columns</p>\n",
+       "<p>5 rows × 318 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -984,38 +1108,31 @@
        "3  1000025          4   2.739601   -0.524734    0.040552    0.317792   \n",
        "4  1000029          4  -0.193270    0.712448   -0.109986   -0.071182   \n",
        "\n",
-       "   DFuncTimes  EFuncTimes  FFuncTimes  FFuncSum  ...  ct_4g  ct_4g#wifi  \\\n",
-       "0   -0.223583   -0.229489   -0.167348 -0.096929  ...      1           0   \n",
-       "1   -0.217512   -0.229489   -0.167348  0.111647  ...      0           0   \n",
-       "2   -0.217512   -0.229489   -0.167348 -0.134224  ...      0           0   \n",
-       "3   -0.112282   -0.052064   -0.167348 -0.134224  ...      0           1   \n",
-       "4   -0.102164    0.217400   -0.167348 -0.129280  ...      0           1   \n",
+       "   DFuncTimes  EFuncTimes  FFuncTimes  FFuncSum  ...  categery_30  \\\n",
+       "0   -0.223583   -0.229489   -0.167348 -0.096929  ...          0.0   \n",
+       "1   -0.217512   -0.229489   -0.167348  0.111647  ...          0.0   \n",
+       "2   -0.217512   -0.229489   -0.167348 -0.134224  ...          0.0   \n",
+       "3   -0.112282   -0.052064   -0.167348 -0.134224  ...          0.0   \n",
+       "4   -0.102164    0.217400   -0.167348 -0.129280  ...          0.0   \n",
        "\n",
-       "   ct_wifi  carrier_China_Mobile  carrier_China_Telecom  carrier_China_Unicom  \\\n",
-       "0        0                     1                      0                     0   \n",
-       "1        1                     0                      1                     0   \n",
-       "2        1                     0                      1                     0   \n",
-       "3        0                     0                      1                     0   \n",
-       "4        0                     0                      0                     1   \n",
+       "   categery_31  categery_32  categery_33  categery_34  categery_35  \\\n",
+       "0          0.0          0.0     0.000000          0.0          0.0   \n",
+       "1          0.0          0.0     0.000000          0.0          0.0   \n",
+       "2          0.0          0.0     0.000000          0.0          0.0   \n",
+       "3          0.0          0.0     0.038462          0.0          0.0   \n",
+       "4          0.0          0.0     0.046875          0.0          0.0   \n",
        "\n",
-       "   carrier_othercp                                 app_total_categery  \\\n",
-       "0                0  [0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, ...   \n",
-       "1                0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "2                0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "3                0  [0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 0, 0, 0, 0, 0, ...   \n",
-       "4                0  [1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 3, 0, 0, 2, ...   \n",
+       "   categery_36  categery_37  categery_38  categery_39  \n",
+       "0          0.0     0.000000     0.000000     0.050000  \n",
+       "1          0.0     0.166667     0.000000     0.111111  \n",
+       "2          0.0     0.076923     0.000000     0.000000  \n",
+       "3          0.0     0.057692     0.038462     0.192308  \n",
+       "4          0.0     0.125000     0.000000     0.078125  \n",
        "\n",
-       "   app_numbers                               app_average_categery  \n",
-       "0           21  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.05, 0.0,...  \n",
-       "1           19  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  \n",
-       "2           13  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  \n",
-       "3           54  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.01923076...  \n",
-       "4           65  [0.015625, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  \n",
-       "\n",
-       "[5 rows x 633 columns]"
+       "[5 rows x 318 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,6 +1141,26 @@
     "print(join_data.info(memory_usage='deep'))\n",
     "print(len(join_data)/2010000)\n",
     "join_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "join_data.values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for each in join_data.columns:\n",
+    "    if join_data[each].dtype == 'object':\n",
+    "        print(each)"
    ]
   },
   {
